fix z-index

--- a/projects/sco-angular-components/src/components/sco-pdf-viewer/sco-pdf-viewer.component.scss
+++ b/projects/sco-angular-components/src/components/sco-pdf-viewer/sco-pdf-viewer.component.scss
@@ -1,6 +1,6 @@
 .sco-pdf-viewer {
     box-sizing: border-box;
-    z-index: 999;
+    z-index: 9999 !important;
     width: 100vw;
     height: 100vh;
     overflow: hidden !important;
